--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,16 @@ dependencies = [
     "ruff>=0.11.4",
     "streamlit>=1.44.1",
 ]
+
+[tool.ruff]
+src = ["src"]
+line-length = 88
+target-version = "py313"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP"]            # formerly top‑level `select` :contentReference[oaicite:1]{index=1}
+ignore = ["W391"]                         # formerly top‑level `ignore` :contentReference[oaicite:2]{index=2}
+per-file-ignores = { "tests/*" = ["A003"] }  # formerly top‑level `per-file-ignores` :contentReference[oaicite:3]{index=3}
+
+[tool.ruff.format]
+preview = true
