--- a/requirements.txt
+++ b/requirements.txt
@@ -4,42 +4,42 @@ altair==5.5.0
     # via streamlit
 annotated-types==0.7.0
     # via pydantic
-anyio==4.9.0
+anyio==4.11.0
     # via
     #   google-genai
     #   httpx
-attrs==25.3.0
+attrs==25.4.0
     # via
     #   jsonschema
     #   referencing
 blinker==1.9.0
     # via streamlit
-cachetools==5.5.2
+cachetools==6.2.1
     # via
     #   google-auth
     #   streamlit
-certifi==2025.4.26
+certifi==2025.10.5
     # via
     #   httpcore
     #   httpx
     #   requests
-charset-normalizer==3.4.1
+charset-normalizer==3.4.4
     # via requests
-click==8.1.8
+click==8.3.0
     # via streamlit
 gitdb==4.0.12
     # via gitpython
-gitpython==3.1.44
+gitpython==3.1.45
     # via streamlit
-google-api-core==2.24.2
-    # via python (pyproject.toml)
-google-auth==2.39.0
+google-api-core==2.28.1
+    # via debt-call-analysis (pyproject.toml)
+google-auth==2.43.0
     # via
     #   google-api-core
     #   google-genai
-google-genai==1.13.0
-    # via python (pyproject.toml)
-googleapis-common-protos==1.70.0
+google-genai==1.49.0
+    # via debt-call-analysis (pyproject.toml)
+googleapis-common-protos==1.72.0
     # via google-api-core
 h11==0.16.0
     # via httpcore
@@ -47,7 +47,7 @@ httpcore==1.0.9
     # via httpx
 httpx==0.28.1
     # via google-genai
-idna==3.10
+idna==3.11
     # via
     #   anyio
     #   httpx
@@ -56,43 +56,43 @@ jinja2==3.1.6
     # via
     #   altair
     #   pydeck
-jsonschema==4.23.0
+jsonschema==4.25.1
     # via altair
-jsonschema-specifications==2025.4.1
+jsonschema-specifications==2025.9.1
     # via jsonschema
-markupsafe==3.0.2
+markupsafe==3.0.3
     # via jinja2
-narwhals==1.37.1
+narwhals==2.10.2
     # via
     #   altair
     #   plotly
-numpy==2.2.5
+numpy==2.3.4
     # via
     #   pandas
     #   pydeck
     #   streamlit
-packaging==24.2
+packaging==25.0
     # via
     #   altair
     #   plotly
     #   streamlit
-pandas==2.2.3
+pandas==2.3.3
     # via
-    #   python (pyproject.toml)
+    #   debt-call-analysis (pyproject.toml)
     #   streamlit
-pillow==11.2.1
+pillow==12.0.0
     # via streamlit
-plotly==6.0.1
-    # via python (pyproject.toml)
+plotly==6.4.0
+    # via debt-call-analysis (pyproject.toml)
 proto-plus==1.26.1
     # via google-api-core
-protobuf==6.30.2
+protobuf==6.33.0
     # via
     #   google-api-core
     #   googleapis-common-protos
     #   proto-plus
     #   streamlit
-pyarrow==20.0.0
+pyarrow==21.0.0
     # via streamlit
 pyasn1==0.6.1
     # via
@@ -100,11 +100,11 @@ pyasn1==0.6.1
     #   rsa
 pyasn1-modules==0.4.2
     # via google-auth
-pydantic==2.11.4
+pydantic==2.12.4
     # via
-    #   python (pyproject.toml)
+    #   debt-call-analysis (pyproject.toml)
     #   google-genai
-pydantic-core==2.33.2
+pydantic-core==2.41.5
     # via pydantic
 pydeck==0.9.1
     # via streamlit
@@ -112,40 +112,42 @@ python-dateutil==2.9.0.post0
     # via pandas
 pytz==2025.2
     # via pandas
-pyyaml==6.0.2
-    # via python (pyproject.toml)
-referencing==0.36.2
+pyyaml==6.0.3
+    # via debt-call-analysis (pyproject.toml)
+referencing==0.37.0
     # via
     #   jsonschema
     #   jsonschema-specifications
-requests==2.32.3
+requests==2.32.5
     # via
     #   google-api-core
     #   google-genai
     #   streamlit
-rpds-py==0.24.0
+rpds-py==0.28.0
     # via
     #   jsonschema
     #   referencing
 rsa==4.9.1
     # via google-auth
-ruff==0.11.8
-    # via python (pyproject.toml)
+ruff==0.14.4
+    # via debt-call-analysis (pyproject.toml)
 six==1.17.0
     # via python-dateutil
 smmap==5.0.2
     # via gitdb
 sniffio==1.3.1
     # via anyio
-streamlit==1.45.0
-    # via python (pyproject.toml)
+streamlit==1.51.0
+    # via debt-call-analysis (pyproject.toml)
 tenacity==9.1.2
-    # via streamlit
+    # via
+    #   google-genai
+    #   streamlit
 toml==0.10.2
     # via streamlit
-tornado==6.4.2
+tornado==6.5.2
     # via streamlit
-typing-extensions==4.13.2
+typing-extensions==4.15.0
     # via
     #   altair
     #   google-genai
@@ -153,11 +155,11 @@ typing-extensions==4.13.2
     #   pydantic-core
     #   streamlit
     #   typing-inspection
-typing-inspection==0.4.0
+typing-inspection==0.4.2
     # via pydantic
 tzdata==2025.2
     # via pandas
-urllib3==2.4.0
+urllib3==2.5.0
     # via requests
 watchdog==6.0.0
     # via streamlit
